fdo#66011 abi#2128 RTF import: fix memory leak

Commit 9389cf78e304a5a99bcf1745b9388e14ac36281a (cp#1000018 RTF import:
empty para at the end of footnote text got lost, 2013-11-15) assumed
that \par at the end of all substreams means an empty paragraph, but it
turns out this is only true for footnotes/endnotes, but not for e.g.
headers.

Additionally, that commit actually causes a memory leak, which is
detected by an assert in the SwIndexReg dtor, so crash-testing caught
this.

(cherry picked from commit f7ef84640258e4ee6ddc4cc5cbf58a2d89860afa)

Change-Id: Idfa040bf3026a9515a120cd7afaf7d314553a131